fix scrollbars

--- a/client/stylesheets/base.styl
+++ b/client/stylesheets/base.styl
@@ -21,9 +21,12 @@
   .header .badge { line-height: 1.8em; }
   .content {
     max-height: 438.39px;
-    overflow: scroll;
+    overflow: hidden;
     .openPrivate .badge { margin-top: -2px; }
     .nav { margin: 0; }
+  }
+  .content:hover {
+    overflow: auto;
   }
 }
 
@@ -33,8 +36,13 @@
   .content {
     .messages {
       height: 400px;
-      overflow: scroll;
+      overflow: hidden;
       margin-bottom: 0.6em;
+    }
+
+    .messages:hover {
+      padding-right: 10px;
+      overflow: auto;
     }
 
     .message {
